# simple-tetris-clone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  resources.conf.in
friends/: CMakeLists.txt
household/: CMakeLists.txt
household/sspacktool/: CMakeLists.txt
household/sspacktool/TestSprite/: asset.json
household/sspacktool/wut/: CMakeLists.txt  wut.cpp  wut.h
src/: CMakeLists.txt  Integrator.h  MacroIOMessage.cpp  MacroIOMessage.h  MacroManager.cpp  MacroManager.h  Main.cpp  MyApplication.cpp  Sprite.cpp  StateProcessor.h  TetrominoBlobRender.h  Tetronimo.cpp  TetronimoRendering.cpp  TetronimoRendering.h  TexturedTriangleShader.cpp  TexturedTriangleShader.h  Utilities.hpp  resources.conf  sprites.tga
src/board/: TetrisBoard.cpp  TetrisBoard.h
src/drawobjey/: RenderTiles.cpp  RenderTiles.h  Sprite.cpp  Sprite.h  SpriteHandler.cpp  SpriteHandler.h
src/layouti/: NodeArrangementUnit.cpp  NodeArrangementUnit.h  TetroCompositor.cpp  TetroCompositor.h
src/support/: Common.h  PulseTimer.cpp  PulseTimer.h  ResourceProfile.cpp  ResourceProfile.h  Utilities.hpp
src/tetromino/: Tetronimo.cpp  Tetronimo.h
src/tetromino/internal/: RotGenConstexpr.hpp
